--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <p class="footer">Want to know more go to Jobs <a id="tribute-link" href="https://en.wikipedia.org/wiki/Steve_Jobs" target="_blank"> Wikipedia page</a></p>
 
 </footer>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
