--- a/index.html
+++ b/index.html
@@ -1,99 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tribute page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <title>Tribute Page</title>
 </head>
-<body id="main">
 
-<header>
-    <div>
-        <h1 id="title">Steve Jobs</h1>
-    </div>
-    <div id="img-div">
-        <img id="image" src="images/steve_jobs_house.jpg" alt="Steve Jobs photo">
-        <div id="img-caption">
-            A 2004 portrait at his house in Palo Alto.
+<body>
+
+    <header>
+        <h1 class="title">Steve Jobs</h1>
+    </header>
+
+    <section class="article">
+
+        <div class="article-wrapper">
+            <h2>Intoduction</h2>
+            <p>Steven Paul Jobs was an American business magnate and investor. He was the chairman, chief executive
+                officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a member of
+                The Walt Disney Company's board of directors
+                following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
+                recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with Apple
+                co-founder Steve Wozniak.</p>
+
+            <blockquote>
+               
+                    "When you grow up you tend to get told that the world is the way it is and your life is just to
+                    live
+                    your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
+                    have
+                    fun, save a little money.
+                <br>
+                    That's a very
+                    limited life. Life can be much broader once you discover one simple fact: Everything around you
+                    that
+                    you call life was made up by people that were no smarter than you and you can change it, you can
+                    influence it, you can build your own things that
+                    other people can use."
+               
+                <span><img src="images/quote.svg" alt="" width="65" height="65"></span>
+            </blockquote>
         </div>
-    </div>
-</header>
 
-<article id="tribute-info">
-    <h2>Intoduction</h2>
-    <p>Steven Paul Jobs was an American business magnate and investor. He was the chairman, chief executive officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a member of The Walt Disney Company's board of directors
-        following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with Apple co-founder Steve Wozniak.</p>
-
-    <blockquote>
-        "When you grow up you tend to get told that the world is the way it is and your life is just to live your life inside the world. Try not to bash into the walls too much. Try to have a nice family, have fun, save a little money.<br> That's a very
-        limited life. Life can be much broader once you discover one simple fact: Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that
-        other people can use."
-        <span><i class="fa fa-quote-left" aria-hidden="true"></i></span>
-    </blockquote>
-</article>
-
-<main>
-    <h2>Timeline</h2>
-
-    <section class="steps">
-        <div>
-
-            <ul class="timeline">
-                <li class="timeline-box">
-                    <p class="timeline-details">Jobs was born in San Francisco, California, and put up for adoption. He was raised in the San Francisco Bay Area. </p>
-                    <span>1955</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">He attended Reed College in 1972 before dropping out that same year, and traveled through India in 1974 seeking enlightenment and studying Zen Buddhism. </p>
-                    <span>1972</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Jobs and Wozniak co-founded Apple in 1976 to sell Wozniak's Apple I personal computer. Together the duo gained fame and wealth a year later for the Apple II, one of the first highly successful mass-produced personal computers. </p>
-                    <span>1976</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Breakthrough of Macintosh in 1984, the first mass-produced computer with a GUI. The Macintosh introduced the desktop publishing industry in 1985 with the addition of the Apple LaserWriter, the first laser printer to feature vector graphics.
-                    </p>
-                    <span>1984</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Jobs was forced out of Apple in 1985 after a long power struggle with the company's board and its then-CEO John Sculley. That same year, Jobs took a few of Apple's members with him to found NeXT, a computer platform development company that
-                        specialized in computers for higher-education and business markets. </p>
-                    <span>1985</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">He helped to develop the visual effects industry when he funded the computer graphics division of George Lucas's Lucasfilm in 1986. The new company was Pixar, which produced Toy Story, the first fully computer-animated film. </p>
-                    <span>1986</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Apple merged with NeXT in 1997, and Jobs became CEO of his former company within a few months. He was largely responsible for helping revive Apple, which had been at the verge of bankruptcy.</p>
-                    <span>1997</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details"> In 2001, the original Mac OS was replaced with a completely new Mac OS X, based on NeXT's NeXTSTEP platform, giving the OS a modern Unix-based foundation for the first time. </p>
-                    <span>2001</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Jobs was diagnosed with a pancreatic neuroendocrine tumor in 2003. </p>
-                    <span>2003</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details"> He died of respiratory arrest related to the tumor at age 56 on October 5, 2011. </p>
-                    <span>2011</span>
-                </li>
-            </ul>
-        </div>
     </section>
-</main>
 
-<footer>
-    <hr>
-    <p class="footer">Want to know more go to Jobs <a id="tribute-link" href="https://en.wikipedia.org/wiki/Steve_Jobs" target="_blank"> Wikipedia page</a></p>
+    <section class="second-image">
+    </section>
 
-</footer>
 
+    <section class="article">
+
+
+        <div class="article-wrapper">
+            <h2>Timeline</h2>
+            <section class="steps">
+                <div>
+
+                    <ul class="timeline">
+                        <li class="timeline-box">
+                            <p class="timeline-details">Jobs was born in San Francisco, California, and put up for
+                                adoption. He was raised in the San Francisco Bay Area. </p>
+                            <span>1955</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">He attended Reed College in 1972 before dropping out that same
+                                year, and traveled through India in 1974 seeking enlightenment and studying Zen
+                                Buddhism.
+                            </p>
+                            <span>1972</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">Jobs and Wozniak co-founded Apple in 1976 to sell Wozniak's
+                                Apple I
+                                personal computer. Together the duo gained fame and wealth a year later for the Apple
+                                II,
+                                one of the first highly successful mass-produced personal computers. </p>
+                            <span>1976</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">Breakthrough of Macintosh in 1984, the first mass-produced
+                                computer
+                                with a GUI. The Macintosh introduced the desktop publishing industry in 1985 with the
+                                addition of the Apple LaserWriter, the first laser printer to feature vector graphics.
+                            </p>
+                            <span>1984</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">Jobs was forced out of Apple in 1985 after a long power
+                                struggle
+                                with the company's board and its then-CEO John Sculley. That same year, Jobs took a few
+                                of
+                                Apple's members with him to found NeXT. </p>
+                            <span>1985</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">He helped to develop the visual effects industry when he funded
+                                the
+                                computer graphics division of George Lucas's Lucasfilm in 1986. The new company was
+                                Pixar,
+                                which produced Toy Story, the first fully computer-animated film. </p>
+                            <span>1986</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details">Apple merged with NeXT in 1997, and Jobs became CEO of his
+                                former
+                                company within a few months. He was largely responsible for helping revive Apple, which
+                                had
+                                been at the verge of bankruptcy.</p>
+                            <span>1997</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details"> In 2001, the original Mac OS was replaced with a completely
+                                new
+                                Mac OS X, based on NeXT's NeXTSTEP platform, giving the OS a modern Unix-based
+                                foundation
+                                for the first time. </p>
+                            <span>2001</span>
+                        </li>
+                        <li class="timeline-box">
+                            <p class="timeline-details"> He died of respiratory arrest related to the tumor at age 56
+                                on
+                                October 5, 2011. </p>
+                            <span>2011</span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <hr>
+        <p class="footer">Want to know more go to Jobs <a id="tribute-link" href="https://en.wikipedia.org/wiki/Steve_Jobs"
+                target="_blank"> Wikipedia page</a></p>
+
+    </section>
 
 </body>
 
