--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
 
         <div class="article-wrapper">
             <h2>Intoduction</h2>
-            <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
-                chairman, chief executive
-                officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a member of
-                The Walt Disney Company's board of directors
-                following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
-                recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with Apple
-                co-founder Steve Wozniak.</p>
+
+            <div class="intro-container">
+                <img src="images/2.jpg" class="intro-img">
+                <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
+                    chairman, chief executive
+                    officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a member
+                    of
+                    The Walt Disney Company's board of directors
+                    following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
+                    recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with Apple
+                    co-founder Steve Wozniak.</p>
+            </div>
 
             <blockquote>
 
