--- a/index.html
+++ b/index.html
@@ -21,36 +21,44 @@
         <div class="article-wrapper">
             <h2>Intoduction</h2>
 
-            <div class="intro-container">
-                <img src="images/2.jpg" class="intro-img">
-                <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
-                    chairman, chief executive
-                    officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a member
-                    of
-                    The Walt Disney Company's board of directors
-                    following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
-                    recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with Apple
-                    co-founder Steve Wozniak.</p>
+            <div class="section-container">
+            <div class="first-section">
+                <div class="intro-container">
+                    <img src="images/2.jpg" class="intro-img">
+                    <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
+                        chairman, chief executive
+                        officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a
+                        member
+                        of
+                        The Walt Disney Company's board of directors
+                        following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
+                        recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with
+                        Apple
+                        co-founder Steve Wozniak.</p>
+                </div>
+
+                <blockquote>
+
+                    "When you grow up you tend to get told that the world is the way it is and your life is just to
+                    live
+                    your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
+                    have
+                    fun, save a little money.
+                    <br>
+                    That's a very
+                    limited life. Life can be much broader once you discover one simple fact: Everything around you
+                    that
+                    you call life was made up by people that were no smarter than you and you can change it, you can
+                    influence it, you can build your own things that
+                    other people can use."
+
+                    <span><img src="images/quote.svg" alt="" width="65" height="65"></span>
+                </blockquote>
             </div>
 
-            <blockquote>
-
-                "When you grow up you tend to get told that the world is the way it is and your life is just to
-                live
-                your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
-                have
-                fun, save a little money.
-                <br>
-                That's a very
-                limited life. Life can be much broader once you discover one simple fact: Everything around you
-                that
-                you call life was made up by people that were no smarter than you and you can change it, you can
-                influence it, you can build your own things that
-                other people can use."
-
-                <span><img src="images/quote.svg" alt="" width="65" height="65"></span>
-            </blockquote>
-
+            <div class="second-section">
+            </div>
+            </div>
             <h2>Timeline</h2>
             <ul class="timeline">
                 <li class="timeline-box">
