--- a/index.html
+++ b/index.html
@@ -21,21 +21,17 @@
         <div class="article-wrapper">
             <h2>Intoduction</h2>
 
-            <div class="section-container">
-            <div class="first-section">
-                <div class="intro-container">
-                    <img src="images/2.jpg" class="intro-img">
-                    <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
-                        chairman, chief executive
-                        officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a
-                        member
-                        of
-                        The Walt Disney Company's board of directors
-                        following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
-                        recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with
-                        Apple
-                        co-founder Steve Wozniak.</p>
-                </div>
+            <div class="intro-container">
+                <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
+                    chairman, chief executive
+                    officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a
+                    member
+                    of
+                    The Walt Disney Company's board of directors
+                    following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
+                    recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with
+                    Apple
+                    co-founder Steve Wozniak.</p>
 
                 <blockquote>
 
@@ -54,11 +50,11 @@
 
                     <span><img src="images/quote.svg" alt="" width="65" height="65"></span>
                 </blockquote>
+
+                <img class="intro-img" src="images/2.svg" height="400px">
+
             </div>
 
-            <div class="second-section">
-            </div>
-            </div>
             <h2>Timeline</h2>
             <ul class="timeline">
                 <li class="timeline-box">
