--- a/index.html
+++ b/index.html
@@ -22,114 +22,130 @@
             <h2>Intoduction</h2>
 
             <div class="intro-container">
-                <p class="article-text">Steven Paul Jobs was an American business magnate and investor. He was the
-                    chairman, chief executive
-                    officer (CEO), and co-founder of Apple Inc.; chairman and majority shareholder of Pixar; a
-                    member
-                    of
-                    The Walt Disney Company's board of directors
-                    following its acquisition of Pixar; and the founder, chairman, and CEO of NeXT. Jobs is widely
-                    recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with
-                    Apple
-                    co-founder Steve Wozniak.</p>
+                <figure class="img-wrapper">
+                    <img src="images/intro_img.jpg" class="intro-img">
+                    <figcaption class="img-text">First Iphone presentation</figcaption>
+                </figure>
+                <div class="text-section">
+                    <p class="article-text">
+                        <span class="article-highlight">Steven Paul Jobs</span> was an American business magnate and
+                        investor. He was the
+                        chairman, chief executive
+                        officer (CEO), and co-founder of <span class="article-highlight">Apple Inc</span>.; chairman
+                        and
+                        majority shareholder of <span class="article-highlight">Pixar</span>; a
+                        member
+                        of
+                        The Walt Disney Company's board of directors
+                        following its acquisition of Pixar; and the founder, chairman, and CEO of <span class="article-highlight">NeXT</span>.
+                        Jobs is widely
+                        recognized as a pioneer of the microcomputer revolution of the 1970s and 1980s, along with
+                        Apple
+                        co-founder <span class="article-highlight">Steve Wozniak</span>.</p>
 
-                <blockquote>
+                    <blockquote>
 
-                    "When you grow up you tend to get told that the world is the way it is and your life is just to
-                    live
-                    your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
-                    have
-                    fun, save a little money.
-                    <br>
-                    That's a very
-                    limited life. Life can be much broader once you discover one simple fact: Everything around you
-                    that
-                    you call life was made up by people that were no smarter than you and you can change it, you can
-                    influence it, you can build your own things that
-                    other people can use."
-
-                    <span><img src="images/quote.svg" alt="" width="65" height="65"></span>
-                </blockquote>
-
-                <img class="intro-img" src="images/2.svg" height="400px">
-
+                        "When you grow up you tend to get told that the world is the way it is and your life is just to
+                        live
+                        your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
+                        have
+                        fun, save a little money.
+                        <br>
+                        That's a very
+                        limited life. Life can be much broader once you discover one simple fact: Everything around you
+                        that
+                        you call life was made up by people that were no smarter than you and you can change it, you
+                        can
+                        influence it, you can build your own things that
+                        other people can use."
+                    </blockquote>
+                </div>
             </div>
+        </div>
 
+        <div class="timeline-wrapper">
             <h2>Timeline</h2>
+
             <ul class="timeline">
                 <li class="timeline-box">
+                    <span class="timeline-header" style="background-image:url(images/san_francisco.jpg);"></span>
+                    <span class="timeline-title">1955</span>
                     <p class="timeline-details">Jobs was born in San Francisco, California, and put up for
                         adoption. He was raised in the San Francisco Bay Area. </p>
-                    <span>1955</span>
                 </li>
                 <li class="timeline-box">
+                    <span class="timeline-header" style="background-image:url(images/college.jpg);"></span>
+                    <span class="timeline-title">1972</span>
                     <p class="timeline-details">He attended Reed College in 1972 before dropping out that same
                         year, and traveled through India in 1974 seeking enlightenment and studying Zen
                         Buddhism.
                     </p>
-                    <span>1972</span>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details">Jobs and Wozniak co-founded Apple in 1976 to sell Wozniak's
-                        Apple I
-                        personal computer. Together the duo gained fame and wealth a year later for the Apple
-                        II,
-                        one of the first highly successful mass-produced personal computers. </p>
-                    <span>1976</span>
-                </li>
-                <li class="timeline-box">
-                    <p class="timeline-details">Breakthrough of Macintosh in 1984, the first mass-produced
-                        computer
-                        with a GUI. The Macintosh introduced the desktop publishing industry in 1985 with the
-                        addition of the Apple LaserWriter, the first laser printer to feature vector graphics.
+                    <span class="timeline-header" style="background-image:url(images/apple.jpg);"></span>
+                    <span class="timeline-title">1976</span>
+                    <p class="timeline-details">
+                        Jobs and Wozniak co-founded Apple in 1976 to sell Wozniak's Apple I
+                        personal computer.
                     </p>
-                    <span>1984</span>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details">Jobs was forced out of Apple in 1985 after a long power
-                        struggle
-                        with the company's board and its then-CEO John Sculley. That same year, Jobs took a few
-                        of
-                        Apple's members with him to found NeXT. </p>
-                    <span>1985</span>
+                    <span class="timeline-header" style="background-image:url(images/macintosh.jpg);"></span>
+                    <span class="timeline-title">1984</span>
+                    <p class="timeline-details">
+                        Breakthrough of Macintosh in 1984, the first mass-produced computer with a GUI.
+                    </p>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details">He helped to develop the visual effects industry when he funded
-                        the
-                        computer graphics division of George Lucas's Lucasfilm in 1986. The new company was
-                        Pixar,
-                        which produced Toy Story, the first fully computer-animated film. </p>
-                    <span>1986</span>
+                    <span class="timeline-header" style="background-image:url(images/next.jpg);"></span>
+                    <span class="timeline-title">1985</span>
+                    <p class="timeline-details">
+                        Jobs was forced out of Apple in 1985 after a long power struggle with the company's board
+                        and
+                        its then-CEO John Sculley. That same year, Jobs took a few of Apple's members with him to
+                        found
+                        NeXT.
+                    </p>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details">Apple merged with NeXT in 1997, and Jobs became CEO of his
-                        former
-                        company within a few months. He was largely responsible for helping revive Apple, which
-                        had
-                        been at the verge of bankruptcy.</p>
-                    <span>1997</span>
+                    <span class="timeline-header" style="background-image:url(images/pixar.jpg);"></span>
+                    <span class="timeline-title">1986</span>
+                    <p class="timeline-details">
+                        He helped to develop the visual effects industry when he founded the new company was Pixar,
+                        which produced Toy Story, the first fully computer-animated film.
+                    </p>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details"> In 2001, the original Mac OS was replaced with a completely
-                        new
-                        Mac OS X, based on NeXT's NeXTSTEP platform, giving the OS a modern Unix-based
-                        foundation
-                        for the first time. </p>
-                    <span>2001</span>
+                    <span class="timeline-header" style="background-image:url(images/return.jpg);"></span>
+                    <span class="timeline-title">1997</span>
+                    <p class="timeline-details">
+                        Apple merged with NeXT in 1997, and Jobs became CEO of his
+                        former company within a few months. He was largely responsible for helping revive Apple
+                        which
+                        had been at the verge of bankruptcy.
+                    </p>
                 </li>
                 <li class="timeline-box">
-                    <p class="timeline-details"> He died of respiratory arrest related to the tumor at age 56
-                        on
-                        October 5, 2011. </p>
-                    <span>2011</span>
+                    <span class="timeline-header" style="background-image:url(images/mac_os.jpg);"></span>
+                    <span class="timeline-title">2001</span>
+                    <p class="timeline-details">
+                        In 2001, the original Mac OS was replaced with a completely
+                        new Mac OS X, based on NeXT's NeXTSTEP platform, giving the OS a modern Unix-based
+                        foundation for the first time.
+                    </p>
+                </li>
+                <li class="timeline-box">
+                    <span class="timeline-header" style="background-image:url(images/last.jpg);"></span>
+                    <span class="timeline-title">2011</span>
+                    <p class="timeline-details">
+                        He died of respiratory arrest related to the tumor at age 56 on October 5, 2011.
+                    </p>
                 </li>
             </ul>
         </div>
-
-        <hr>
-        <p class="footer">Want to know more go to Jobs <a id="tribute-link" href="https://en.wikipedia.org/wiki/Steve_Jobs"
-                target="_blank"> Wikipedia page</a></p>
-
+        <a href="https://en.wikipedia.org/wiki/Steve_Jobs" target="_blank">
+            <img src="images/wikipedia.svg" height="60" width="60" class="wikipedia-icon" alt="wikipedia">
+        </a>
     </section>
 
 </body>
