quote svg added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         co-founder <span class="article-highlight">Steve Wozniak</span>.</p>
 
                     <blockquote>
-
                         "When you grow up you tend to get told that the world is the way it is and your life is just to
                         live
                         your life inside the world. Try not to bash into the walls too much. Try to have a nice family,
@@ -58,6 +57,7 @@
                         can
                         influence it, you can build your own things that
                         other people can use."
+                        <span><img src="images/quote.svg" alt="quote" height="60" width="60"> </span>
                     </blockquote>
                 </div>
             </div>
