--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <span class="timeline-header" style="background-image:url(images/pixar.jpg);"></span>
                     <span class="timeline-title">1986</span>
                     <p class="timeline-details">
-                        He helped to develop the visual effects industry when he founded the new company was Pixar,
+                        He helped to develop the visual effects industry when he founded the new company Pixar,
                         which produced Toy Story, the first fully computer-animated film.
                     </p>
                 </li>
