Smooth scrolling added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
     <header>
         <h1 class="title">Steve Jobs</h1>
+        <a class="nav-link" href="#article"><img src="images/arrow.svg" class="arrow bounce" height="30" width="30"></a>
     </header>
 
-    <section class="article">
+    <section id="article" class="article">
 
         <div class="article-wrapper">
             <h2>Intoduction</h2>
@@ -147,7 +148,7 @@
             <img src="images/wikipedia.svg" height="60" width="60" class="wikipedia-icon" alt="wikipedia">
         </a>
     </section>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
